# quadcopter_controller

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
apps/: CMakeLists.txt
apps/cascaded_controller_2d/: CMakeLists copy.txt  CMakeLists.txt
apps/cascaded_controller_2d/include/: include_helper.h  paths.h
apps/cascaded_controller_2d/parameters/: plot_parameters.yaml
apps/cascaded_controller_3d/: CMakeLists.txt
apps/cascaded_controller_3d/include/: include_helper.h  mocap_sub_callback.h  paths.h  reference_sub_callback.h  subscriber_variables.h
apps/cascaded_controller_3d/parameters/: controller_gains.yaml  (+2 more)
apps/position_controller_3d/: CMakeLists.txt
cascaded_controller_app/: CMakeLists.txt  main.cpp
cascaded_controller_app/include/: include_helper.h  log_variables.h  mocap_sub_callback.h  paths.h  set_values.h  yaml_paths.h
cascaded_controller_app/parameters/: controller_gains.yaml  controller_parameters.yaml  controller_timescales.yaml  quadcopter_parameters.yaml  setpoint.yaml  simulation_parameters.yaml
cascaded_controller_app/src/: main.cpp
controller/: CMakeLists.txt
controller/pid_cascaded/: pid_cascaded.cpp  pid_cascaded.h  pid_controllers.cpp
controller_lib/: CMakeLists.txt
controller_lib/basic_controllers/: CMakeLists.txt
controller_lib/basic_controllers/include/: basic_controllers.h
controller_lib/basic_controllers/src/: pid.cpp
controller_lib/pid_cascaded/: CMakeLists.txt
controller_lib/pid_cascaded/include/: pid.h  pid_cascaded.h
controller_lib/pid_cascaded/src/: pid_cascaded.cpp  set_gains.cpp
controller_lib/quadcopter_controllers/: CMakeLists.txt
controller_lib/quadcopter_controllers/2d/pid_cascaded/: CMakeLists.txt
controller_lib/quadcopter_controllers/2d/pid_cascaded/include/: pid_cascaded.h
controller_lib/quadcopter_controllers/2d/pid_cascaded/src/: pid_cascaded.cpp  set_values.cpp
controller_lib/quadcopter_controllers/pid_cascaded/: CMakeLists.txt
controller_lib/quadcopter_controllers/pid_cascaded/include/: motor_mixing.h  pid_cascaded.h
controller_lib/quadcopter_controllers/pid_cascaded/src/: pid_cascaded.cpp  set_gains.cpp  set_values.cpp
controller_lib/quadcopter_mixers/2d/: CMakeLists.txt
controller_lib/quadcopter_mixers/2d/saturation_cutoff_mixer/: CMakeLists.txt
controller_lib/quadcopter_mixers/2d/saturation_cutoff_mixer/include/: saturation_cutoff_mixer.h
controller_lib/quadcopter_mixers/2d/saturation_cutoff_mixer/src/: saturation_cutoff_mixer.cpp
controller_lib/quadcopter_mixers/saturation_cutoff_mixer/include/: saturation_cutoff_mixer.h
controller_lib/quadcopter_mixers/saturation_cutoff_mixer/src/: saturation_cutoff_mixer.cpp  set_values.cpp
lib/: CMakeLists.txt
logs/: data_log.txt  data_log.txt2021-10-01 10:50:33 AM.  data_log.txt2021-10-01 10:51:28 AM.  data_log.txt2021-10-01 11:26:12 AM.  event_log_2021-09-30.txt  event_log_2021-10-01.txt
project/: CMakeLists.txt  controller_parameters.yaml  main.cpp
project/include/: include_helper.h  mocap_subscriber_callback.h  plot.h  set_values.h
project/parameters/: initial_conditions.yaml  plot_parameters.yaml
(+7 files in other folders)
